mesh/envoy-content.yaml
static_resources:
  listeners:
    - name: egress_listener
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 5001 # Ascolta in locale all'interno del container api-content
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: egress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: stats_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: stats_service_cluster
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: stats_service_cluster
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: stats_service_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: api-stats # Host di api-stats su mesh-net
                      port_value: 5002    # Porta del sidecar ingress di api-stats
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          common_tls_context:
            tls_certificates:
              - certificate_chain:
                  filename: /etc/envoy/certs/api-content.crt
                private_key:
                  filename: /etc/envoy/certs/api-content.key
            validation_context:
              trusted_ca:
                filename: /etc/envoy/certs/ca.crt
              match_typed_subject_alt_names:
                - san_type: DNS
                  matcher:
                    exact: api-stats
                - san_type: DNS
                  matcher:
                    exact: localhost

admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901
